# automated-job-search

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
config/sites/: __init__.py  sites_config.py
data/: alembic.ini
data/alembic/: env.py
data/alembic/versions/: e55052041658_create_jobs_table.py  e8bc2ccefca7_add_additional_data_column.py
data/jobs/: jobs.db
scripts/migration/: migrate_database.py
scripts/setup/: init_database.py
src/: __main__.py
src/database/: __init__.py  connection.py  operations.py
src/database/migrations/: 001_add_additional_data_field.py  __init__.py
src/database/models/: __init__.py  job.py
src/scrapers/: __init__.py  base_scraper.py  scraper_manager.py
src/scrapers/sites/: __init__.py  hirebase_scraper.py
tests/: conftest.py
tests/unit/database/: test_models.py
tests/unit/scrapers/: test_base_scraper.py  test_hirebase_scraper.py  test_scraper_manager.py
