[project]
name = "automated-job-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "beautifulsoup4>=4.13.4",
    "fake-useragent>=2.2.0",
    "freezegun>=1.5.2",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "requests>=2.32.4",
    "responses>=0.25.7",
    "selenium>=4.34.0",
    "sqlalchemy>=2.0.41",
    "webdriver-manager>=4.0.2",
]
